--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.28",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vuex": "^4.0.2",
+    "vuex": "^4.1.0",
     "yup": "^1.0.0"
   },
   "devDependencies": {
